[gd_scene load_steps=5 format=3 uid="uid://co88tfdxmlknv"]

[ext_resource type="Script" path="res://BattleOfTheAlma.gd" id="1_1o6i7"]
[ext_resource type="Texture2D" uid="uid://bygi6dnlxnt6h" path="res://graphics/environment/BattleoftheAlmaMap.png" id="2_xwq6i"]
[ext_resource type="PackedScene" uid="uid://cpm1ldb8ohnws" path="res://scenes/player/BritishReg.tscn" id="4_5lqtq"]
[ext_resource type="PackedScene" uid="uid://cqvd3a3cj3ktu" path="res://scenes/player/RussianReg.tscn" id="5_13ojy"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1o6i7")

[node name="BattleoftheAlmaMap" type="Sprite2D" parent="."]
position = Vector2(1919.89, 1080)
texture = ExtResource("2_xwq6i")

[node name="Path2D" type="Path2D" parent="."]
visible = false
position = Vector2(16, 80)
rotation = -0.053417

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(1591.27, 551.661)
rotation = 1.48422
loop = false

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D"]
position = Vector2(0.456543, 0.431641)
rotation = 1.79571

[node name="ProjectilesEnemy" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Projectiles" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("4_5lqtq")]
unique_name_in_owner = true
position = Vector2(1880, 1664)

[node name="RussianReg" parent="." instance=ExtResource("5_13ojy")]
position = Vector2(1768, 728)
rotation = -3.13814

[connection signal="playerPos" from="Player" to="RussianReg" method="_on_player_player_pos"]
[connection signal="player_shoot" from="Player" to="." method="_on_player_player_shoot"]
[connection signal="russianShoot" from="RussianReg" to="." method="_on_russian_reg_2_russian_shoot"]
[connection signal="russianShoot" from="RussianReg" to="." method="_on_russian_reg_russian_shoot"]
